# bankofveyda

./: BACKEND_IMPLEMENTATION.md  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  accounts.py  auth.py  transactions.py
backend/app/models/: __init__.py  account.py  audit.py  kyc.py  risk_score.py  transaction.py  user.py
backend/app/schemas/: account.py  token.py  transaction.py  user.py
backend/app/services/: account_service.py  banking_service.py  kyc_service.py  lifecycle_engine.py  risk_engine.py
backend/app/utils/: __init__.py  logger.py  security.py
backend/app/workers/: __init__.py  celery_app.py
backend/config/: settings.py  urls.py
backend/core/: admin.py  auth_forms.py  forms.py  models.py  tests.py  urls.py  views.py
backend/core/management/commands/: seed_data.py
backend/core/migrations/: 0001_initial.py
backend/templates/: base.html
backend/templates/core/: compliance.html  dashboard.html  login.html  request_account.html
backend/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
backend/tests/: conftest.py  test_api.py
frontend/: angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: index.html  styles.scss
(+34 files in other folders)
